[tool.poetry]
name = "ed-domain"
version = "0.3.1"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
twine = "^6.1.0"


[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
